<resources>
    <string name="app_name">WorldSrc</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="tab1_name">HOME</string>
    <string name="tab2_name">Top Movies</string>
    <string name="tab3_name">Top Music</string>
    <string name="tab4_name">Top APK</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="menu_favourites">Favourites</string>
    <string name="menu_Share">Share</string>
    <string name="menu_help">Help</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_rate">Rate</string>



    <string name="menu_title_Movies">Movies </string>
    <string name="menu_movies_all">All Movies</string>
    <string name="menu_movies_subtitle">Movies Subtitle</string>

    <string name="menu_title_Apk">APK </string>
    <string name="menu_apk_paid">APK Paid</string>
    <string name="menu_apk_mod">APK Mod </string>


    <string name="menu_title_Music">Music </string>
    <string name="menu_music_en">Arabic Music</string>
    <string name="menu_music_ar">English Music</string>

</resources>
